--- a/views/details.hbs
+++ b/views/details.hbs
@@ -5,5 +5,6 @@
     <p><span>Description:</span> {{description}}</p>
     <p><span>Difficulty level:</span> {{difficulty}}</p>
     <a class="btn" href="/">Back</a>
+    <a class="btn btn-del" href="/delete/{{id}}">Delete</a>
   </div>
 </main>
