--- a/views/editCubePage.hbs
+++ b/views/editCubePage.hbs
@@ -1,6 +1,6 @@
 <h1>Edit Cube</h1>
 <div class="form">
-  <form action='/' method="POST">
+  <form action='/edit' method="POST">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" value="">
     <label for="name">Description</label>
