--- a/views/loginPage.hbs
+++ b/views/loginPage.hbs
@@ -1,14 +1,11 @@
-<h1>Register Form</h1>
+<h1>Login Form</h1>
 <div class="form">
-  <form action='/' method="POST">
+  <form action='/login' method="POST">
     <label for="username">Username</label>
     <input type="text" id="username" name="username">
 
     <label for="password">Password</label>
     <input type="password" id="password" name="password">
-
-    <label for="repeatPassword">Re-Password</label>
-    <input type="password" id="repeatPassword" name="repeatPassword">
-    <input type="submit" value="Register">
+    <input type="submit" value="Login">
   </form>
 </div>
