--- a/views/registerPage.hbs
+++ b/views/registerPage.hbs
@@ -1,11 +1,14 @@
-<h1>Login Form</h1>
+<h1>Register Form</h1>
 <div class="form">
-  <form action='/' method="POST">
+  <form action='/register' method="POST">
     <label for="username">Username</label>
     <input type="text" id="username" name="username">
 
     <label for="password">Password</label>
     <input type="password" id="password" name="password">
-    <input type="submit" value="Login">
+
+    <label for="repeatPassword">Re-Password</label>
+    <input type="password" id="repeatPassword" name="repeatPassword">
+    <input type="submit" value="Register">
   </form>
 </div>
