fix: attach accessory

--- a/views/attachAccessory.hbs
+++ b/views/attachAccessory.hbs
@@ -2,7 +2,7 @@
 <div class="form">
   <h2>{{name}}</h2>
   <img class="cube" src="{{imageUrl}}">
-  {{#if canAttachAccessory}}
+  {{#if accessories}}
   <form action='/attach/accessory/{{_id}}' method="POST">
     <label for="accessory">Accessories</label>
     <select id="accessory" name="accessory">
