--- a/views/details.hbs
+++ b/views/details.hbs
@@ -5,7 +5,10 @@
   <p><span>Difficulty level:</span> {{difficulty}}</p>
   <a class="btn" href="/">Back</a>
   <a class="btn btn-del" href="/attach/accessory/{{_id}}">Attach accessory</a>
+  {{#if isLoggedIn}}
   <a class="btn btn-del" href="/delete/{{_id}}">Delete</a>
+  <a class="btn btn-del" href="/edit/{{_id}}">Edit</a>
+  {{/if}}
 </div>
 <h2>Accessories</h2>
 <div class="accessories">
