feat: implement validation and notification

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         {{> header}}
+        {{> error-message}}
         <main>
             {{{body}}}
         </main>
